styling updates to center blog images, clean up code block alignment, fix project tile text wrap

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -446,15 +446,16 @@ a:active {
     
       a {
         display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 100%;
       }
     
       img {
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
-        object-position: center;
       }
     }
 
