--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -7,13 +7,15 @@ body.blog {
   .postHero {
     a {
       display: flex;
+      align-items: center;
+      align-content: center;
       width: 100%;
       height: 100%;
 
       img {
         object-fit: cover;
         width: 100%;
-        height: auto;
+        height: 100%;
       }
     }
   }
