--- a/sass/_posts-and-pages.scss
+++ b/sass/_posts-and-pages.scss
@@ -71,8 +71,6 @@
     padding: 20px;
     background: #002b36;
     color: #839496;
-    margin-left: -20px;
-    margin-right: -20px;
     max-width: none;
   }
 
